--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
   </head>
   <body>
-    <main class="bg-light my-4 mx-3 rounded">
+    <main class="bg-light my-4 mx-3 rounded" id="main">
       <header class="py-4">
         <h3 id="title" class="text-center mb-3">Dr. Norman Borlaug</h3>
         <h6 id="" class="text-center">The man who saved a billion lives</h6>
@@ -26,7 +26,7 @@
               src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
               alt="tribute image"
               id="image"
-              class="img-fluid"
+
             />
           </div>
           <div class="text-center">
@@ -40,7 +40,7 @@
       </section>
 
       <section>
-        <div d="tribute-info" class="col-md-5 mx-auto py-md-5 py-4">
+        <div id="tribute-info" class="col-md-5 mx-auto py-md-5 py-4">
           <h5 class="text-center mb-5">
             Here's a time line of Dr. Borlaug's life:
           </h5>
